--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         }
     ],
     "require": {
-        "narrator/monolog": "dev-1.x"
+        "narrator/monolog": "1.x-dev"
     },
     "autoload": {
         "psr-0": {
